--- a/form6.html
+++ b/form6.html
@@ -163,142 +163,136 @@
                         <img src="assets/img/icons/cross.svg" alt="" class="brcont__cross">
                     </div>
                 </section>
-                <section class="newsgen">
-                    <div class="newsgen__container newscompany">
-
-                        <div class="newscompany__bottom cbot">
-                            <div class="cbot__container ccont">
-                                <div class="ccont__desc">
-                                    <div class="ccont__desc-subtitle effective">
-                                        <h2 class="effective__title">Новости</h2>
-                                        <p class="effective__text">Среди наших клиентов существует постоянная потребность в доставке грузов авиасообщением. Поэтому для оказания полного комплекса логистических услуг мы решили открыть направление авиаперевозок.</p>
-                                    </div>
-                                </div>
-                                <div class="ccont__buttons cbut">
-                                    <div class="cbut__social">
-                                        <a href="#!" class="cbut__social-links">FACEBOOK</a>
-                                        <a href="#!" class="cbut__social-links">INSTAGRAM</a>
-                                        <a href="#!" class="cbut__social-links">LINKEDIN</a>
-                                    </div>
-                                    <div class="cbut__messenger">
-                                        <a href="#!" class="cbut__mseenger-link">
-                                            <img src="assets/img/icons/whatsapp.svg" alt="Значок whatsapp"
-                                                class="cbut__messenger-link--icon">
-                                        </a>
-                                        <a href="#!" class="cbut__mseenger-link">
-                                            <img src="assets/img/icons/viber.svg" alt="Значок viber"
-                                                class="cbut__messenger-link--icon">
-                                        </a>
-                                        <a href="#!" class="cbut__mseenger-link">
-                                            <img src="assets/img/icons/skype.svg" alt="Значок skype"
-                                                class="cbut__messenger-link--icon">
-                                        </a>
-                                        <a href="#!" class="cbut__mseenger-link">
-                                            <img src="assets/img/icons/telegram.svg" alt="Значок telegram"
-                                                class="cbut__messenger-link--icon">
-                                        </a>
-
-
-
-
-                                    </div>
-                                </div>
-
+                <section class="shortlyform">
+                    <div class="shortlyform__container shortcont">
+                        <div class="shortcont__inputs">
+                            <div class="shortcont__inputs-input shortinput">
+                                <h3 class="shortinput__text">Ваше имя</h3>
+                                <input type="text" class="shortinput__input">
+                            </div>
+                            <div class="shortcont__inputs-input shortinput">
+                                <h3 class="shortinput__text">E-mail или телефон</h3>
+                                <input type="text" class="shortinput__input">
+                            </div>
+                            <div class="shortcont__inputs-input shortinput">
+                                <h3 class="shortinput__text">Откуда</h3>
+                                <input type="text" class="shortinput__input">
+                            </div>
+                            <div class="shortcont__inputs-input shortinput">
+                                <h3 class="shortinput__text">Куда</h3>
+                                <input type="text" class="shortinput__input">
+                            </div>
+                            <div class="shortcont__inputs-input shortinput shortcomment">
+                                <h3 class="shortinput__text">Ваш комментарий</h3>
+                                <input type="text" class="shortinput__input shortcomment__input">
                             </div>
                         </div>
-
+                        <div class="shortcont__attach shortatt">
+                            <h3 class="shortatt__title">Добавить файл</h3>
+                            <div class="shortatt__attach">
+                                <h3 class="shortatt__attach-text">Добавьте файл сюда</h3>
+                            </div>
+                        </div>
+                        <div class="shortcont__policy">
+                            <input type="checkbox" class="shortcont__policy-checkbox">
+                            <h3 class="shortcont__policy-title">Я согласен с условиями <a href="#!">Политики конфиденциальности</a> и <a href="#!">Обработки персональных данных.</a></h3>
+                        </div>
+                        <a href="#!" class="shortcont__link">
+                            <h3 class="shortcont__link-text">ПОЛУЧИТЬ РАССЧЁТ</h3>
+                            <img src="/assets/img/icons/arrow.svg" alt="" class="shortcont__link-icon">
+                        </a>
+                        <div class="shortcont__full">
+                            <p class="shortcont__full-text">Полную информацию можно заполнить <br>
+                                нажимая на кнопку «Полная форма»
+                            </p>
+                            <a href="/form.html" class="shortcont__full-link shlink">
+                                <h3 class="shlink__text">ПОЛНАЯ ФОРМА</h3>
+                                <img src="assets/img/icons/arrow.svg" alt="" class="shlink__icon">
+                            </a>
+                        </div>
+                        <a href="" class="shortcont__close">
+                            <img src="assets/img/icons/cross.svg" alt="" class="shortcont__close-icon">
+                        </a>
                     </div>
                 </section>
-                <section class="new">
-                    <div class="new__container newsco">
-                        <div class="newsco__news">
-                            <a href="" class="newsco__news-card necard necard--selected">
-                                <div class="necard__image">
-                                    <img src="assets/img/images/news/1.jpg" alt="" class="necard__image-picture">
+                <section class="formcom">
+                    <div class="formload__container forcont">
+                        <div class="forcont__timeline">
+                            <h3 class="forcont__timeline-title">РАСЧЁТ СТОИМОСТИ</h3>
+                            <div class="forcont__timeline-time fortime">
+                                <div class="fortime__items foritems">
+                                    <div class="foritems__item written">
+                                        <img src="assets/img/icons/dot.svg" alt="" class="foritems__item-circactive">
+                                        <img src="assets/img/icons/circle.svg" alt="" class="foritems__item-circwritten">
+                                        <img src="assets/img/icons/Form/wcircle.svg" alt="" class="foritems__item-circle">
+                                        <h3 class="foritems__item-title">личные данные</h3>
+                                    </div>
+                                    <div class="foritems__item written">
+                                        <img src="assets/img/icons/dot.svg" alt="" class="foritems__item-circactive">
+                                        <img src="assets/img/icons/circle.svg" alt="" class="foritems__item-circwritten">
+                                        <img src="assets/img/icons/Form/wcircle.svg" alt="" class="foritems__item-circle">
+                                        <h3 class="foritems__item-title">направления</h3>
+                                    </div>
+                                    <div class="foritems__item written">
+                                        <img src="assets/img/icons/dot.svg" alt="" class="foritems__item-circactive">
+                                        <img src="assets/img/icons/circle.svg" alt="" class="foritems__item-circwritten">
+                                        <img src="assets/img/icons/Form/wcircle.svg" alt="" class="foritems__item-circle">
+                                        <h3 class="foritems__item-title">параметры груза</h3>
+                                    </div>
+                                    <div class="foritems__item written">
+                                        <img src="assets/img/icons/dot.svg" alt="" class="foritems__item-circactive">
+                                        <img src="assets/img/icons/circle.svg" alt="" class="foritems__item-circwritten">
+                                        <img src="assets/img/icons/Form/wcircle.svg" alt="" class="foritems__item-circle">
+                                        <h3 class="foritems__item-title">загрузка</h3>
+                                    </div>
+                                    <div class="foritems__item written">
+                                        <img src="assets/img/icons/dot.svg" alt="" class="foritems__item-circactive">
+                                        <img src="assets/img/icons/circle.svg" alt="" class="foritems__item-circwritten">
+                                        <img src="assets/img/icons/Form/wcircle.svg" alt="" class="foritems__item-circle">
+                                        <h3 class="foritems__item-title">условия поставки</h3>
+                                    </div>
+                                    <div class="foritems__item active">
+                                        <img src="assets/img/icons/dot.svg" alt="" class="foritems__item-circactive">
+                                        <img src="assets/img/icons/circle.svg" alt="" class="foritems__item-circwritten">
+                                        <img src="assets/img/icons/Form/wcircle.svg" alt="" class="foritems__item-circle">
+                                        <h3 class="foritems__item-title">комментарий</h3>
+                                    </div>
                                 </div>
-                                <div class="necard__date">
-                                    <h3 class="necard__date-number">22</h3>
-                                    <p class="necard__date-date">Декабря 2022</p>
-                                </div>
-                                <div class="necard__text">
-                                    <h3 class="necard__text-title">Компания GTHREES подводит итоги работы за 2018 год.</h3>
-                                    <p class="necard__text-subtitle">Создание благоприятной среды взаимопонимания и взаимоуважения всех участников цепочки поставок, соблюдая национальные и международные законы и правила, а также строгие этические принципы ведения бизнеса. Быть партнёром по росту и развитию для наших клиентов. Как логистическая компания, мы предлагаем эффективные решения...</p>
-                                    <img src="assets/img/icons/arrow-blue.svg" alt="" class="necard__text-arrow">
-                                </div>
-                            </a>
-                            <a href="" class="newsco__news-card necard">
-                                <div class="necard__image">
-                                    <img src="assets/img/images/news/2.jpg" alt="" class="necard__image-picture">
-                                </div>
-                                <div class="necard__date">
-                                    <h3 class="necard__date-number">22</h3>
-                                    <p class="necard__date-date">Декабря 2022</p>
-                                </div>
-                                <div class="necard__text">
-                                    <h3 class="necard__text-title">Компания GTHREES подводит итоги.</h3>
-                                    <p class="necard__text-subtitle">Быть партнёром по росту и развитию для наших клиентов. Как логистическая компания, мы предлагаем эффективные решения, основываясь на нашем опыте в следующих областях: транспортно-экспедиционное обслуживание клиентов. Наша компания предоставляет широкий спектр услуг по доставке грузов наземным, морским и воздушным транспортом...</p>
-                                    <img src="assets/img/icons/arrow-blue.svg" alt="" class="necard__text-arrow">
-                                </div>
-                            </a>
-                            <a href="" class="newsco__news-card necard">
-                                <div class="necard__image">
-                                    <img src="assets/img/images/news/3.jpg" alt="" class="necard__image-picture">
-                                </div>
-                                <div class="necard__date">
-                                    <h3 class="necard__date-number">22</h3>
-                                    <p class="necard__date-date">Декабря 2022</p>
-                                </div>
-                                <div class="necard__text">
-                                    <h3 class="necard__text-title">Компания GTHREES подводит итоги работы за 2018 год.</h3>
-                                    <p class="necard__text-subtitle">Быть партнёром по росту и развитию для наших клиентов. Как логистическая компания, мы предлагаем эффективные решения, основываясь на нашем опыте в следующих областях: транспортно-экспедиционное обслуживание клиентов. Наша компания предоставляет широкий спектр услуг по доставке грузов наземным, морским и воздушным транспортом...</p>
-                                    <img src="assets/img/icons/arrow-blue.svg" alt="" class="necard__text-arrow">
-                                </div>
-                            </a>
-                            <a href="" class="newsco__news-card necard">
-                                <div class="necard__image">
-                                    <img src="assets/img/images/news/4.jpg" alt="" class="necard__image-picture">
-                                </div>
-                                <div class="necard__date">
-                                    <h3 class="necard__date-number">22</h3>
-                                    <p class="necard__date-date">Декабря 2022</p>
-                                </div>
-                                <div class="necard__text">
-                                    <h3 class="necard__text-title">Компания GTHREES подводит итоги.</h3>
-                                    <p class="necard__text-subtitle">Быть партнёром по росту и развитию для наших клиентов. Как логистическая компания, мы предлагаем эффективные решения, основываясь на нашем опыте в следующих областях: транспортно-экспедиционное обслуживание клиентов. Наша компания предоставляет широкий спектр услуг по доставке грузов наземным, морским и воздушным транспортом...</p>
-                                    <img src="assets/img/icons/arrow-blue.svg" alt="" class="necard__text-arrow">
-                                </div>
-                            </a>
+                            </div>
                         </div>
-                        <a href="#!" class="newsco__news-button">ПОКАЗАТЬ ЕЩЁ</a>
+                        <div class="forcont__form">
+                            <div class="forcont__form-upper forup">
+                                <div class="forup__inputs">
+                                    <h3 class="forup__inputs-title">Ваш комментарий</h3>
+                                    <input type="text" class="forup__inputs-input">
+                                </div>
+                                <div class="forup__inputs">
+                                    <h3 class="forup__inputs-title">Добавить файл</h3>
+                                    <div class="forup__inputs-file frfile">
+                                        <h3 class="frfile__text">Добавьте файл сюда</h3>
+                                        <img src="assets/img/icons/attach.svg" alt="" class="frfile__image">
+                                    </div>
+                                    <div class="forup__inputs-policy frpol">
+                                        <input type="checkbox" class="frpol__checkbox">
+                                        <span class="frpol__text">Я согласен с условиями <a href="#!">Политики конфиденциальности</a> и <a href="#!">Обработки персональных данных.</a> </span>
+                                    </div>
+                                </div>
+                                <div class="forup__inputs ftake">
+                                    <a href="/index.html" class="forup__inputs-take ftake__take">ПОЛУЧИТЬ РАССЧЁТ</a>
+                                    <img src="assets/img/icons/arrow.svg" alt="#!" class="forup__inputs-icon ftake__icon">
+                                </div>
+                            </div>
+                            <div class="forcont__btn forbtn">
+                                <a href="№!" onclick="history.back(); return false;" class="forbtn__arrow forbtn__image">
+                                    <img src="assets/img/icons/Form/arrow.svg" alt="Вернуться на шаг назад" class="forbtn__arrow-image">
+                                </a>
+                                <a href="/index.html" class="forbtn__cross forbtn__image">
+                                    <img src="assets/img/icons/Form/cross.svg" alt="Закрыть форму" class="forbtn__cross-image">
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                </section> 
-                <section class="contact" id="call">
-                    
-                    <div class="contact__footer cfoot cnews">
-                        <div class="cfoot__upper cfup">
-                            <div class="cfup__mail">
-                                <h3 class="cfup__mail-title">Для сотрудничества:</h3>
-                                <a href="#!" class="cfup__mail-mail">info@gthrees.com</a>
-                            </div>
-                            <div class="cfup__subscribe">
-                                <a href="#!" class="cfup__subscribe-link">Подписаться</a>
-                                <a href="#!" class="cfup__subscribe-number">+375(17)252-22-25</a>
-                            </div>
-                            <div class="cfup__sell">
-                                <h3 class="cfup__sell-title">Отдел продаж:</h3>
-                                <a href="#!" class="cfup__sell-mail">sales@gthrees.com</a>
-                            </div>
-                        </div>
-                        <div class="contact__bottom cfbot">
-                            <h3 class="cfbot__text">© 2023, GTHREES</h3>
-                            <a href="#!" class="cfbot__likeit">
-                                <h3 class="cfbot__likeit-text">Разработано в</h3>
-                                <img src="assets/img/icons/likeIt.svg" alt="" class="cfbot__likeit-icon">
-                            </a>
-                        </div>
-                        <img src="assets/img/icons/title-dark.svg" alt="" class="cfoot__title">
-                    </div>
-                </section>  
+                </section>        
             </div>
         </main>
         <footer class="application__footer footer">
