--- a/hire.html
+++ b/hire.html
@@ -61,9 +61,13 @@
                     <span class="nav__language-text">RU</span>
                     <img src="assets/img/icons/arrow-lng.svg" alt="" class="nav__language-icon">
                 </button>
-                <button class="nav__button">
+                <button class="nav__button" onclick="location.href='form.html'">
                     <span class="nav__button-text">Получить рассчёт</span>
                     <img src="assets/img/icons/arrow.svg" alt="Значок стрелки" class="nav__button-arrow">
+                </button>
+                <button class="nav__mobform " onclick="location.href='shortform.html'">
+                    <span class="nav__mobform-text">Получить рассчёт</span>
+                    <img src="assets/img/icons/arrow.svg" alt="Значок стрелки" class="nav__mobform-arrow">
                 </button>
                 <button class="nav__burger">
                     <img src="assets/img/icons/burger.svg" alt="Иконка меню" class="nav__burger-icon">
@@ -72,6 +76,93 @@
         </header>
         <main class="application__main main" id="main">
             <div class="main__content" id="main-content">
+                <section class="burger">
+                    <div class="burger__container brcont">
+                        <div class="brcont__top">
+                            <div class="brcont__top-grid brgrid">
+                                
+                                <div class="brgrid__col brcol brcoltopleft">
+                                    <h3 class="brcol__title">Услуги</h3>
+                                    <div class="brcol__columns">
+                                        <a href="/services.html" class="brcol__columns-item">авиаперевозки</a>
+                                        <a href="/services.html" class="brcol__columns-item">железнодорожные перевозки</a>
+                                        <a href="/services.html" class="brcol__columns-item">автомобильные перевозки</a>
+                                        <a href="/services.html" class="brcol__columns-item">перевозки опасных грузов</a>
+                                        <a href="/services.html" class="brcol__columns-item">мультимодальные перевозки</a>
+                                        <a href="/services.html" class="brcol__columns-item">перевозки тяжеловесных и негабаритных грузов</a>
+                                    </div>
+                                </div>
+                                <div class="brgrid__col brcol brcoltopright">
+                                    <h3 class="brcol__title">КОМПАНИЯ</h3>
+                                    <div class="brcol__columns brcompany">
+                                        <a href="/company.html" class="brcol__columns-item">о компании</a>
+                                        <a href="/hire.html" class="brcol__columns-item">вакансии</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="brcont__bottom">
+                            <div class="brcont__bottom-grid brbgrid">
+                                <div class="brbgrid__col brbcol">
+                                    <h3 class="brbcol__title">КОНТАКТЫ</h3>
+                                    <div class="brbcol__columns">
+                                        <div class="brbcol__columns-belarus brbel">
+                                            <p class="brbel__title">ОФИС В РЕСПУБЛИКЕ БЕЛАРУСЬ</p>
+                                            <div class="brbel__contacts">
+                                                <p class="brbel__contacts-addr">г. Минск, пер. Козлова, 7Г-7</p>
+                                                <a href="#!" class="brbel__contacts-number">Тел: +375 (17) 252-22-25</a>
+                                            </div>
+                                            <div class="brbel__mail">
+                                                <a href="#!" class="brbel__mail-email">info@ghtrees.com</a>
+                                                <a href="#!" class="brbel__mail-email">sales@ghtrees.com</a>
+                                            </div>
+                                        </div>
+                                        <div class="brbcol__columns-russia brrus">
+                                            <p class="brrus__title">ОФИС В РОССИЙСКОЙ ФЕДЕРАЦИИ</p>
+                                            <div class="brrus__contacts">
+                                                <p class="brrus__contacts-addr">214013, г. Смоленск</p>
+                                                <p class="brrus__contacts-addr">ул. Памфилова, 5; офис 217</p>
+                                            </div>
+                                        </div>
+                                        <div class="brbcol__columns-contacts brbconts">
+                                            <a href="#!" class="brbconts__number">+375(17)252-22-25</a>
+                                            <div class="brbconts__sotr">
+                                                <p class="brbconts__sotr-title">Для сотрудничества</p>
+                                                <a href="#!" class="brbconts__sotr-email">info@gthrees.com</a>
+                                            </div>
+                                            <div class="brbconts__sell">
+                                                <p class="brbconts__sell-title">Отдел продаж</p>
+                                                <a href="#!" class="brbconts__sell-email">sales@gthrees.com</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="brcont__mobile">
+                            <div class="brcont__mobile-social brsoc">
+                                <a href="" class="brsoc__social">
+                                    <img src="assets/img/icons/whatsapp.svg" alt="" class="brsoc__social-icon">
+                                </a>
+                                <a href="" class="brsoc__social">
+                                    <img src="assets/img/icons/viber.svg" alt="" class="brsoc__social-icon">
+                                </a>
+                                <a href="" class="brsoc__social">
+                                    <img src="assets/img/icons/skype.svg" alt="" class="brsoc__social-icon">
+                                </a>
+                                <a href="" class="brsoc__social">
+                                    <img src="assets/img/icons/telegram.svg" alt="" class="brsoc__social-icon">
+                                </a>
+                            </div>
+                            <div class="brcont__mobile-public brpub">
+                                <a href="#!" class="brpub__item">FACEBOOK</a>
+                                <a href="#!" class="brpub__item">INSTAGRAM</a>
+                                <a href="#!" class="brpub__item">LINKEDIN</a>
+                            </div>
+                        </div>
+                        <img src="assets/img/icons/cross.svg" alt="" class="brcont__cross">
+                    </div>
+                </section>
                 <section class="servgen">
                     <div class="servgen__container servcompany">
 
